# neobot

./: .gitignore  README.md
src/basic_mobile_robot/: package.xml
src/basic_mobile_robot/launch/: neobot_v1.launch.py
src/basic_mobile_robot/models/: neobot_urdf.urdf  test.urdf
src/nav2_astar_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/nav2_astar_planner/src/: astar_planner.cpp
src/neobot/: CMakeLists.txt  package.xml
src/neobot/config/: diff_controller.yaml  mapper_params_online_async.yaml  nav2_params.yaml  ros_gz_bridge.yaml  ros_gz_bridge_no_ros2_control.yaml  twist_mux.yaml
src/neobot/launch/: gz_bridge.launch.py  gz_spawn.launch.py  mapping.launch.py  neobot_gz.launch.py  neobot_nav2.launch.py  neobot_rviz.launch.py  neobot_sim.launch.py  neobot_urdf_rviz.launch.py  raw_gazebo.launch.py  raw_spawn.launch.py
src/neobot/maps/: neobot_map.yaml
src/neobot/meshes/: base_link.STL  base_link_main.STL  left_wheel_link.STL  lidar.STL  motor.STL  realsense.STL
src/neobot/models/: neobot_model.config  neobot_model.sdf  neobot_model_old.sdf  neobot_model_plain_old.sdf  neobot_modeltest.sdf  test.sdf  tutorial.sdf
src/neobot/rviz/: nav2_default_config.rviz  rviz_config.rviz  urdf_config.rviz
src/neobot/urdf/: gz.xacro  gz_plugins.xacro  macros.xacro  materials.xacro  (+4 more)
src/neobot_control/: CMakeLists.txt  package.xml
src/neobot_control/src/: wheel_speed_pub.cpp
src/neobot_nav2_bringup/: CMakeLists.txt  package.xml
src/neobot_nav2_bringup/launch/: bringup.launch.py  localization.launch.py  navigation.launch.py  slam.launch.py
(+9 files in other folders)
